--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8">
             <div class="timeline-item"  data-aos="fade">
-              <h3>Ourn Vision</h3>
+              <h3>Our Vision</h3>
               <p>To be the most preferred and endorsed 
                 manufacturers of a wide range of paint 
                 brands that rank among the best top 
