about us changes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="row site-hero-inner justify-content-center align-items-center">
           <div class="col-md-10 text-center" data-aos="fade-up">
             <span class="custom-caption text-uppercase text-white d-block  mb-3"><span class="fa fa-brush text-primary"></span>   Kingdom Paints</span>
-            <h1 class="heading">Ultimate durability</h1>
+            <h1 class="heading" style="font-size:50px;">Ultimate durability</h1>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
           </div>
           <div class="col-md-12 col-lg-4 order-lg-1" data-aos="fade-up">
             <h3>Who are we!</h3>
-            <p class="mb-4"> Kingdom Paints is a division of Adelogue Holdings, a limited 
+            <p class="mb-4" style="color: black;"> Kingdom Paints is a division of Adelogue Holdings, a limited 
               company incorporated in Zimbabwe under the Company’s Act 
               (Chapter 24:03). The Company opened its doors to business 
               on 1 June 2009 bringing together in the process well known 
