--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
           </div>
           <div class="col-md-12 col-lg-4 order-lg-1" data-aos="fade-up">
             <h2 class="heading">Welcome!</h2>
-            <p class="mb-4">At Kingdom Paints, We offer to the market a wide range of 
+            <p class="mb-4" style="color: black;">At Kingdom Paints, We offer to the market a wide range of 
               paints and,paint application services 
               ,supporting and related products. Our 
               structure, membership and size, at 
@@ -121,7 +121,95 @@
         </div>
       </div>
     </section>
+    <div class="container section">
 
+      <div class="row justify-content-center text-center mb-5">
+        <div class="col-md-7 mb-5">
+          <h2 class="heading" data-aos="fade-up">Our Team</h2>
+        </div>
+      </div>
+
+      <div class="row"><!---->
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="block-2">
+            <div class="flipper">
+              <!--<div class="front" style="background-image: url(images/team.jpg);">
+                <div class="box">
+                  <h2>Joseph Ngadze</h2>
+                  <p>( Manager Operations) MBA</p>
+                  <h2>Gabriel</h2>
+                  <p>(Production)  Paint Technology  (SAPMA )</p>
+                </div>
+              </div>
+              <div class="back">
+                <-- back content 
+                <blockquote>
+                  <p>&ldquo;Striving and prospering in the spirit of  togetherness in pursuit of a common goal.&rdquo;</p>
+                </blockquote>
+                <div class="author d-flex">
+                  <div class="image mr-3 align-self-center">
+                    <img src="images/team.jpg" alt="">
+                  </div>
+                  <div class="name align-self-center">Kingdom Paints<span class="position">Team</span></div>
+                </div>
+              </div>-->
+            </div>
+          </div> <!-- .flip-container -->
+        </div>
+
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="block-2"> <!-- .hover -->
+            <div class="flipper">
+              <div class="front" style="background-image: url(images/team.jpg);">
+                <div class="box">
+                  <h2>Joseph Ngadze</h2>
+                  <p>( Manager Operations) MBA</p>
+                  <h2>Gabriel</h2>
+                  <p>(Production) Paint Technology (SAPMA )</p>
+                </div>
+              </div>
+              <div class="back">
+                <blockquote>
+                  <p>&ldquo;Striving and prospering in the spirit of togetherness in pursuit of a common goal.&rdquo;</p>
+                </blockquote>
+                <div class="author d-flex">
+                  <div class="image mr-3 align-self-center">
+                    <img src="images/team.jpg" alt="">
+                  </div>
+                  <div class="name align-self-center">Kingdom Paints<span class="position">Team</span></div>
+                </div>
+              </div>
+            </div>
+          </div> <!-- .flip-container -->
+        </div>
+       <!--
+        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="block-2">
+            <div class="flipper">
+              <div class="front" style="background-image: url(images/person_2.jpg);">
+                <div class="box">
+                  <h2>Jeffrey Neddery</h2>
+                  <p>Marketing Director</p>
+                </div>
+              </div>
+              <div class="back">
+                <-- back content 
+                <blockquote>
+                  <p>&ldquo;Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.&rdquo;</p>
+                </blockquote>
+                <div class="author d-flex">
+                  <div class="image mr-3 align-self-center">
+                    <img src="images/person_2.jpg" alt="">
+                  </div>
+                  <div class="name align-self-center">Jeffrey Neddery <span class="position">Marketing Director</span></div>
+                </div>
+              </div>
+            </div>
+          </div> <-- .flip-container 
+        </div>-->
+      </div>
+    </div>
+    
     <div class="section">
       <div class="container">
 
